--- a/themes/portio/layouts/index.html
+++ b/themes/portio/layouts/index.html
@@ -4,7 +4,7 @@
 
 {{ partial "aboutSection.html" . }}
 
-{{ partial "serviceSection.html" . }}
+<!-- {{ partial "serviceSection.html" . }}
 
 {{ partial "portfolioSection.html" . }}
 
@@ -14,6 +14,6 @@
 
 {{ partial "testimonialSection.html" . }}
 
-{{ partial "blogSection.html" . }}
+{{ partial "blogSection.html" . }} -->
 
 {{ end }}
