--- a/themes/portio/assets/scss/_buttons.scss
+++ b/themes/portio/assets/scss/_buttons.scss
@@ -22,6 +22,7 @@
 
 .btn-light {
   color: $primary;
+
   &:hover {
     color: $primary;
   }
@@ -30,8 +31,35 @@
 .btn-zoom {
   transition: all 0.3s ease;
   transform: scale(1);
+
   &:hover {
     box-shadow: 0 8px 20px rgba(56, 87, 241, 0.3);
     transform: scale(1.03);
   }
+}
+
+.btn-store {
+  color: #ffffff;
+  min-width: 254px;
+  padding: 12px 20px !important;
+  border-color: #ffffff !important;
+  margin-bottom: 10px;
+}
+
+.btn-store:focus,
+.btn-store:hover {
+  color: #ffffff !important;
+  background-color: #ea8716;
+  border-color: #ea8716 !important;
+}
+
+.btn-store .btn-label,
+.btn-store .btn-caption {
+  display: block;
+  text-align: left;
+  line-height: 1;
+}
+
+.btn-store .btn-caption {
+  font-size: 24px;
 }
