--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -26,42 +26,17 @@
 						<h2 class="mb-0">Let us find the study group that suits you.</h2>
 					</div>
 					<div class="footer__cta_action">
-						<a class="btn btn-light btn-zoom" href="{{ .Site.Params.contactLink | absURL }}">Get in
-							touch</a>
+					<a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
+							<span class="fa fa-apple fa-3x pull-left"></span> 
+							<span class="btn-label">Download on the</span>
+							<span class="btn-caption">App Store</span>
+					</a>
+					<a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
+							<span class="fa fa-android fa-3x pull-left"></span> 
+							<span class="btn-label">Download on the</span>
+							<span class="btn-caption">Google Play</span>
+					</a>
 					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row footer__widget">
-			<div class="col-lg-4">
-				<div class="footer__widget_logo mb-5">
-					<img src="{{ .Site.Params.footerLogo | absURL }}" alt="widget-logo">
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="text-light footer__widget_sitemap mb-5">
-					<h4 class="base-font">Sitemap</h4>
-					<ul class="unstyle-list small">
-						{{ $sitemap := .Site.Menus.sitemap }}
-						{{ range $sitemap }}
-						<li class="mb-2"><a class="text-light" href="{{ .URL | absURL }}">{{ .Name }}</a></li>
-						{{ end }}
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="text-light footer__widget_address mb-5">
-					<h4 class="base-font">Address</h4>
-					{{ $address := .Site.Params.address }}
-					<ul class="fa-ul small">
-						<li class="mb-2"><a class="text-light" href="tel:{{ $address.phone }}"><span class="fa-li"><i
-										class="fa fa-phone"></i></span>{{ $address.phone }}</a></li>
-						<li class="mb-2"><a class="text-light" href="mailto:{{ $address.email }}"><span class="fa-li"><i
-										class="fa fa-envelope"></i></span>{{ $address.email }}</a></li>
-						<li class="mb-2">
-							<span class="fa-li"><i class="fa fa-map-marker"></i></span>{{ $address.address }}</a>
-						</li>
-					</ul>
 				</div>
 			</div>
 		</div>
