--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -40,6 +40,7 @@
 				</div>
 			</div>
 		</div>
+		<div class="row" style="padding: 15px;"></div>
 		<div class="row footer__footer">
 			<div class="col-lg-6">
 				<div class="footer__footer_copy text-light">
