Add contact us page

--- a/themes/portio/layouts/contact/list.html
+++ b/themes/portio/layouts/contact/list.html
@@ -25,12 +25,12 @@
     <div class="row">
       <div class="col-12 text-center">
         <h3 class="breadCrumb__title">{{ .Title }}</h3>
-        <nav aria-label="breadcrumb" class="d-flex justify-content-center">
+        <!-- <nav aria-label="breadcrumb" class="d-flex justify-content-center">
           <ol class="breadcrumb align-items-center">
             <li class="breadcrumb-item"><a href="{{ .Site.BaseURL }}">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">{{ .Params.breadcrumb }}</li>
           </ol>
-        </nav>
+        </nav> -->
       </div>
     </div>
   </div>
@@ -51,12 +51,12 @@
               </svg>
             </div>
             <div class="icon">
-              <img src="{{ "images/contact/location.svg" | absURL }}" alt="location" />
+              <img height="80px" src="{{ "images/contact/whatsapp.png" | absURL }}" alt="location" />
             </div>
           </div>
-          <h4>Office Address</h4>
+          <h4>Contact on Whatsapp</h4>
           <p>
-            {{ $address.address }}
+            <a href={{ $address.whatsapplink }}>Click Here.</a>
           </p>
         </div>
       </div>
@@ -71,11 +71,10 @@
               </svg>
             </div>
             <div class="icon">
-              <img src="{{ "images/contact/phone.svg" | absURL }}" alt="phone" />
+              <img height="90px" src="{{ "images/contact/email.png" | absURL }}" alt="phone" />
             </div>
           </div>
-          <h4>Phone & Email</h4>
-          <p>{{ $address.phone }}<br>
+          <h4>Email</h4>
             <a href="mailto:{{ $address.email }}">{{ $address.email }}</a>
           </p>
 
@@ -92,7 +91,7 @@
               </svg>
             </div>
             <div class="icon">
-              <img src="{{ "images/contact/time.svg" | absURL }}" alt="time" />
+              <img height="80px" src="{{ "images/contact/timer.png" | absURL }}" alt="time" />
             </div>
           </div>
           <h4>Working Hours</h4>
@@ -105,7 +104,7 @@
   </div>
 </section>
 
-<section class="contact-form">
+<!-- <section class="contact-form">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -185,6 +184,6 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 {{ end }}
