Removed the contact us margin

--- a/themes/portio/layouts/contact/list.html
+++ b/themes/portio/layouts/contact/list.html
@@ -21,7 +21,7 @@
   <div class="animate-pattern">
     <!-- <img src="{{ "images/service/background-pattern.svg" | absURL }}" alt="background-shape"> -->
   </div>
-  <div class="container" style="margin-top: 50px;">
+  <div class="container">
     <div class="row">
       <div class="col-12 text-center">
         <h3 class="breadCrumb__title">{{ .Title }}</h3>
