Fix download text

--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -26,16 +26,16 @@
 						<h2 class="mb-0">Let us find the study group that suits you.</h2>
 					</div>
 					<div class="footer__cta_action">
-					<a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
-							<span class="fa fa-apple fa-3x pull-left"></span> 
-							<span class="btn-label">Download on the</span>
+						<a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
+							<span class="fa fa-apple fa-3x pull-left"></span>
+							<span class="btn-label">Download from</span>
 							<span class="btn-caption">App Store</span>
-					</a>
-					<a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
-							<span class="fa fa-android fa-3x pull-left"></span> 
-							<span class="btn-label">Download on the</span>
+						</a>
+						<a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
+							<span class="fa fa-android fa-3x pull-left"></span>
+							<span class="btn-label">Download from</span>
 							<span class="btn-caption">Google Play</span>
-					</a>
+						</a>
 					</div>
 				</div>
 			</div>
