--- a/themes/portio/assets/scss/components/_about-section.scss
+++ b/themes/portio/assets/scss/components/_about-section.scss
@@ -1,16 +1,20 @@
 .about {
   overflow: hidden;
+
   &_content {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
     &-thumb {
       width: 45%;
       position: relative;
+
       @include desktop {
         width: 100%;
       }
+
       .about-svg {
         position: absolute;
         top: -11%;
@@ -18,19 +22,23 @@
         z-index: -1;
         height: 150px;
         animation: move_top 4s infinite;
+
         @include tablet {
           top: -7%;
           left: -16%;
         }
+
         img {
           height: 100%;
           width: 100%;
         }
       }
+
       .about_content-thumb-image {
         img {
           height: 100%;
           width: 100%;
+
           &.about_mask_svg {
             mask: url(../images/about/about-mask-svg.svg);
             -webkit-mask-repeat: no-repeat;
@@ -40,6 +48,7 @@
         }
       }
     }
+
     &-inner {
       width: 55%;
       padding: 60px 50px;
@@ -47,14 +56,17 @@
       border-radius: 20px;
       margin-left: -60px;
       position: relative;
+
       @include desktop {
         padding: 25px;
       }
+
       @include desktop {
         width: 100%;
         margin-left: 0;
         margin-top: 30px;
       }
+
       &-blob {
         position: absolute;
         top: -55%;
@@ -62,13 +74,19 @@
         z-index: -1;
         width: 400.369px;
         height: 362.909px;
+
         svg {
           width: 140%;
         }
+
         @include tablet {
           display: none;
         }
       }
+    }
+
+    @include tablet {
+      flex-direction: column-reverse;
     }
   }
 }
