--- a/themes/portio/layouts/contact/list.html
+++ b/themes/portio/layouts/contact/list.html
@@ -40,7 +40,7 @@
 <section class="section contact__info">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-6">
         <div class="contact__info_item">
           <div class="contact__info_item-icon">
             <div class="icon-background">
@@ -54,13 +54,13 @@
               <img height="80px" src="{{ "images/contact/whatsapp.png" | absURL }}" alt="location" />
             </div>
           </div>
-          <h4>Contact on Whatsapp</h4>
+          <h4>Whatsapp</h4>
           <p>
             <a href={{ $address.whatsapplink }}>Click Here.</a>
           </p>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-6">
         <div class="contact__info_item">
           <div class="contact__info_item-icon">
             <div class="icon-background">
@@ -80,7 +80,7 @@
 
         </div>
       </div>
-      <div class="col-lg-4">
+      <!-- <div class="col-lg-4">
         <div class="contact__info_item">
           <div class="contact__info_item-icon">
             <div class="icon-background">
@@ -99,7 +99,7 @@
             {{ $address.openingHours }}
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
