--- a/themes/portio/assets/scss/components/_about-section.scss
+++ b/themes/portio/assets/scss/components/_about-section.scss
@@ -64,7 +64,7 @@
       @include desktop {
         width: 100%;
         margin-left: 0;
-        margin-top: 30px;
+        margin-bottom: 20px;
       }
 
       &-blob {
