--- a/themes/portio/layouts/partials/aboutSection.html
+++ b/themes/portio/layouts/partials/aboutSection.html
@@ -1,6 +1,7 @@
 {{ with .Site.Data.aboutSection }}
 {{ if .enable }}
 <section class="section about" id="about">
+    <div style="height: 80px;"></div>
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-6 offset-lg-3">
