--- a/themes/portio/layouts/index.html
+++ b/themes/portio/layouts/index.html
@@ -12,8 +12,8 @@
 
 {{ partial "skillSection.html" . }}
 
-{{ partial "testimonialSection.html" . }}
+{{ partial "testimonialSection.html" . }} -->
 
-{{ partial "blogSection.html" . }} -->
+{{ partial "blogSection.html" . }}
 
 {{ end }}
