Add SEO tags for website

--- a/themes/portio/layouts/partials/head.html
+++ b/themes/portio/layouts/partials/head.html
@@ -2,6 +2,15 @@
   <meta charset="utf-8" />
   <title>{{ .Title }}</title>
 
+
+  {{ "<!-- SEO optimisation meta -->" | safeHTML }}
+  <meta name="title" content="Group Study">
+  <meta name="description" content="Study in groups for best retention. Best Peer to Peer learning App. Try it today. We have special Beta Launch Offers.">
+  <meta name="keywords" content="Group Study, Student, Team Work, Study Online, Student Group">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
