--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -22,8 +22,11 @@
 								transform="translate(217.489 188.626)" />
 						</svg>
 					</div>
-					<div class="text-light footer__cta_content">
+					<div class="text-light" style="margin-bottom: 20px;">
 						<h2 class="mb-0">Let us find the study group that suits you.</h2>
+					</div>
+					<div class="text-light footer__cta_content">
+						<p>We will release our platform to the public soon. If you are interested in our product, then please enroll for Alpha Testing.</p>
 					</div>
 					<div class="footer__cta_action">
 						<!-- <a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
@@ -31,10 +34,13 @@
 							<span class="btn-label">Download from</span>
 							<span class="btn-caption">App Store</span>
 						</a> -->
-						<a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
+						<!-- <a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
 							<span class="fa fa-android fa-3x pull-left"></span>
 							<span class="btn-label">Download from</span>
 							<span class="btn-caption">Google Play</span>
+						</a> -->
+						<a href="{{ .Site.Params.alphaTestingGoogleForm }}" class="btn btn-store" target="_blank" >
+							<span class="btn-caption">Enroll for Alpha Testing!</span>
 						</a>
 					</div>
 				</div>
