--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -22,26 +22,23 @@
 								transform="translate(217.489 188.626)" />
 						</svg>
 					</div>
-					<div class="text-light" style="margin-bottom: 20px;">
+					<div class="text-light container text-center" style="margin-bottom: 10px;">
 						<h2 class="mb-0">Let us find the study group that suits you.</h2>
 					</div>
-					<div class="text-light footer__cta_content">
-						<p>We will release our platform to the public soon. If you are interested in our product, then please enroll for Alpha Testing.</p>
-					</div>
-					<div class="footer__cta_action">
-						<!-- <a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
+					<!-- <div class="footer__cta_action">
+						<a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
 							<span class="fa fa-apple fa-3x pull-left"></span>
 							<span class="btn-label">Download from</span>
 							<span class="btn-caption">App Store</span>
-						</a> -->
-						<!-- <a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
+						</a>
+						<a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
 							<span class="fa fa-android fa-3x pull-left"></span>
 							<span class="btn-label">Download from</span>
 							<span class="btn-caption">Google Play</span>
-						</a> -->
-						<a href="{{ .Site.Params.alphaTestingGoogleForm }}" class="btn btn-store" target="_blank" >
-							<span class="btn-caption">Enroll for Alpha Testing!</span>
 						</a>
+					</div> -->
+					<div class="text-light container text-center" >
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9aZRCOPtCV5a06K9PpN6YDN73ZAgptC9VvwLRszIMcPp4Dw/viewform?embedded=true" width="640" height="843" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 					</div>
 				</div>
 			</div>
