--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -25,21 +25,21 @@
 					<div class="text-light container text-center" style="margin-bottom: 10px;">
 						<h2 class="mb-0">Let us find the study group that suits you.</h2>
 					</div>
-					<!-- <div class="footer__cta_action">
-						<a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
-							<span class="fa fa-apple fa-3x pull-left"></span>
-							<span class="btn-label">Download from</span>
-							<span class="btn-caption">App Store</span>
-						</a>
+					 <div class="footer__cta_action">
 						<a href="{{ .Site.Params.androidAppLink }}" class="btn btn-store" target="_blank">
 							<span class="fa fa-android fa-3x pull-left"></span>
 							<span class="btn-label">Download from</span>
 							<span class="btn-caption">Google Play</span>
 						</a>
-					</div> -->
-					<div class="text-light container text-center" >
-						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9aZRCOPtCV5a06K9PpN6YDN73ZAgptC9VvwLRszIMcPp4Dw/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        <a href="{{ .Site.Params.iosAppLink }}" class="btn btn-store" target="_blank">
+                            <span class="fa fa-apple fa-3x pull-left"></span>
+                            <span class="btn-label">Fill this form for</span>
+                            <span class="btn-caption">iOS App</span>
+                        </a>
 					</div>
+					<!-- <div class="text-light container text-center" > -->
+					<!-- 	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9aZRCOPtCV5a06K9PpN6YDN73ZAgptC9VvwLRszIMcPp4Dw/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+					<!-- </div> -->
 				</div>
 			</div>
 		</div>
