Added Privacy policy

--- a/themes/portio/layouts/partials/footer.html
+++ b/themes/portio/layouts/partials/footer.html
@@ -47,7 +47,8 @@
 		<div class="row footer__footer">
 			<div class="col-lg-6">
 				<div class="footer__footer_copy text-light">
-					<p>{{ .Site.Params.copyright }}</p>
+
+					<p><a class="text-light" target="_blank" href="/privacy_policy">Privacy Policy</a> | {{ .Site.Params.copyright }}</p>
 				</div>
 			</div>
 			<div class="col-lg-6">
